--- a/main.html
+++ b/main.html
@@ -10,7 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<li>
+		<ol>food</ol>
+		<ol>
+			cloth
+		</ol>
+		<ol>grocery</ol>
+	</li>
+	<li>
+		<ul>laddakh</ul>
+		<ul>kashmir</ul>
+		<ul>manali</ul>
+	</li>
 </body>
 
 </html>
