--- a/main.html
+++ b/main.html
@@ -10,18 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<li>
-		<ol>food</ol>
-		<ol>
-			cloth
-		</ol>
-		<ol>grocery</ol>
-	</li>
-	<li>
-		<ul>laddakh</ul>
-		<ul>kashmir</ul>
-		<ul>manali</ul>
-	</li>
+	<ol>
+  <li data-ns-test="shoppingList">New laptop</li>
+  <li data-ns-test="shoppingList">Designer clothes</li>
+  <li data-ns-test="shoppingList">Gym membership</li>
+</ol>
+
+<ul>
+  <li data-ns-test="holidayList">laddak</li>
+  <li data-ns-test="holidayList">jakarta</li>
+  <li data-ns-test="holidayList">singapore</li>
+</ul>
 </body>
 
 </html>
